# project_idea

./: CMakeLists.txt  README.md  build.py  chitu.py
app/: CMakeLists.txt  hello_world.h  host.cpp  main.cpp
dal/: CMakeLists.txt  feed_protocol.c  feed_protocol.h  led.c  led.h
fun/: CMakeLists.txt  feed_manage.cpp  feed_manage.h  heat_algo.cpp  heat_algo.h
hal/: CMakeLists.txt  gpio.c  gpio.h  uart.c  uart.h
mid/: CMakeLists.txt  log.c  log.h
